--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/bni
+MONGODB_URI=mongodb+srv://bniabundance:Bniabundance%402025@cluster0.nptekug.mongodb.net/bniabundance?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret_key
-PORT=5000
-
-
+PORT=10000
