--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://bniabundance:Bniabundance%402025@cluster0.nptekug.mongodb.net/bniabundance?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://bniabundance:Bniabundance%402025@cluster0.nptekug.mongodb.net/bni?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret_key
 PORT=10000
